<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffffff" xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<Button android:id="@+id/ButtonNewEasyGame" android:layout_centerHorizontal="true" android:background="@drawable/grey_button_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="easyGameButtonClicked" android:textStyle="bold" android:text="@string/btn_easy" android:layout_marginTop="20dip" android:textSize="24sp"></Button>    
	<Button android:id="@+id/ButtonNewHardGame" android:layout_centerHorizontal="true" android:background="@drawable/grey_button_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="hardGameButtonClicked" android:textStyle="bold" android:text="@string/btn_hard" android:textSize="24sp" android:layout_below="@+id/ButtonNewEasyGame"></Button>
	<Button android:id="@+id/ButtonNewHarderGame" android:layout_centerHorizontal="true" android:background="@drawable/grey_button_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="harderGameButtonClicked" android:textStyle="bold" android:text="@string/btn_harder" android:textSize="24sp" android:layout_below="@+id/ButtonNewHardGame"></Button>
	<Button android:id="@+id/ButtonNewRainmanGame" android:layout_centerHorizontal="true" android:background="@drawable/grey_button_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="rainmanGameButtonClicked" android:textStyle="bold" android:text="@string/btn_rainman" android:textSize="24sp" android:layout_below="@+id/ButtonNewHarderGame"></Button>
	<Button android:id="@+id/ButtonExit" android:layout_centerHorizontal="true" android:background="@drawable/grey_button_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="exitButtonClicked" android:textStyle="bold" android:text="@string/btn_exit" android:textSize="24sp" android:layout_below="@+id/ButtonNewRainmanGame" android:layout_marginTop="20dip"></Button>
</RelativeLayout>
