<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scoreView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/scoreTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/scoreTitle"
        android:textColor="@color/grey05" >
    </TextView>

    <TextView
        android:id="@+id/score"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreTitle"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:height="40dp"
        android:text="@string/score"
        android:textColor="@color/black"  >
    </TextView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/touchToContinue"
        android:height="40dp"
        android:textColor="@color/grey05" >
    </TextView>

    <ImageView
        android:id="@+id/goldStarLevelUnlocked"
        android:contentDescription="@string/levelunlockedimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:src="@drawable/gold_star" />
        
</RelativeLayout>
